# data_obfuscation

./: README.md
Transformer/: CMakeLists.txt  EncodingTransformationContext.cpp  EncodingTransformationContext.h  Normalizer.cpp  Normalizer.h  Transformer.cpp  VariableDeclEncoder.cpp  VariableDeclEncoder.h  run.sh
Transformer/Distance/: Encoded_BGNUM.cpp  Makefile  distance.cpp
Transformer/Test/: test.cpp  test1.cpp  test2.cpp  test3.cpp
Transformer/res/: Encoded.cpp
regressionTesting/: readme.txt  regression.properties  regression.sh  time.txt
regressionTesting/Test1/: Makefile  output.txt  t_01  t_01.cpp  testcase.properties
regressionTesting/Test10/: Makefile  output.txt  t_10  t_10.cpp  t_10.rule  testcase.properties
regressionTesting/Test11/: Makefile  output.txt  t_11  t_11_a.cpp  t_11_a.cpp.rule  t_11_a.h  t_11_b.cpp  testcase.properties
regressionTesting/Test2/: Makefile  output.txt  t_02  t_02.c  testcase.properties
regressionTesting/Test3/: Makefile  output.txt  t_03  t_03.cpp  testcase.properties
regressionTesting/Test4/: Makefile  output.txt  t_04  t_04.cpp  testcase.properties
regressionTesting/Test5/: Makefile  output.txt  t_05  t_05.cpp  testcase.properties
regressionTesting/Test6/: Makefile  output.txt  t_06  t_06.cpp  testcase.properties
regressionTesting/Test7/: Makefile  output.txt  t_07  t_07.cpp  testcase.properties
regressionTesting/Test8/: Makefile  output.txt  t_08  t_08.c  testcase.properties
regressionTesting/Test9/: Makefile  output.txt  t_09  t_09.c  testcase.properties
regressionTesting/enumTestSuite/: e_0001.c  (+554 more)
(+14 files in other folders)
